# adventofcode2020-hs

./: adventofcode2020-hs.cabal
src/Solutions/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
