cabal-version:      3.0

name:                adventofcode2020-hs
version:             0.1.0.0
author:              Bob Klaase

common common
  default-language:    Haskell2010
  build-depends:       base ^>=4.14.1.0,
                       adventofcode2020-hs

executable adventofcode2020-hs
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
  -- hs-source-dirs:
  default-language:    Haskell2010

library
  exposed-modules:     AoC.Lib
                       Solutions.Day1
  build-depends:       base ^>=4.14.1.0,
                       time ^>=1.9.3,
                       array ^>=0.5.4.0
  default-language:    Haskell2010
  hs-source-dirs:      ./src


executable solve
  import:              common
  hs-source-dirs:      ./exe
  main-is:             Solve.hs

executable test
  import:              common
  hs-source-dirs:      ./test
  main-is:             Spec.hs
  other-modules:       Solutions.Day1Spec,
  build-depends:       hspec ^>=2.7.4,
                       array ^>=0.5.4.0