cabal-version:      3.0

name:                adventofcode2020-hs
version:             0.1.0.0
author:              Bob Klaase

common common
  default-language:    Haskell2010
  build-depends:       base ^>=4.14.1.0,
                       adventofcode2020-hs

library
  exposed-modules:     AoC.Lib
                       Solutions.Day1
                       Solutions.Day2
  build-depends:       array ^>=0.5.4.0,
                       base ^>=4.14.1.0,
                       text ^>= 1.2.3.2,
                       time ^>=1.9.3
  default-language:    Haskell2010
  hs-source-dirs:      ./src


executable solve
  import:              common
  hs-source-dirs:      ./exe
  main-is:             Solve.hs

executable test
  import:              common
  hs-source-dirs:      ./test
  main-is:             Spec.hs
  other-modules:       Solutions.Day1Spec,
  build-depends:       array ^>=0.5.4.0,
                       hspec ^>=2.7.4,